Mon May  5 21:52:35 2014  Tanaka Akira  <akr@fsij.org>

	* ext/pathname/lib/pathname.rb (cleanpath_aggressive): make all
	  separators File::SEPARATOR from File::ALT_SEPARATOR.
	  Reported by Daniel Rikowski.
	  Fixed by Nobuyoshi Nakada.  [Bug #9618]

	* ext/pathname/lib/pathname.rb (cleanpath_conservative): ditto.

Mon May  5 21:48:04 2014  Tanaka Akira  <akr@fsij.org>

	* ext/pathname/lib/pathname.rb (Pathname#/): Aliased to Pathname#+.
	  Suggested by Alexey Muranov.  [ruby-core:61432] [Feature #9625]

Mon May  5 17:26:09 2014  Tadayoshi Funaba  <tadf@dotrb.org>

	* math.c (rb_math_sqrt): omitted exporting an unused function,
	  anyway.
	* internal.h: follows the above change.

Mon May  5 11:44:03 2014  Tanaka Akira  <akr@fsij.org>

	* lib/time.rb (Time.strptime): Raise ArgumentError if Date._strptime
	  doesn't extract date information.
	  Reported by tadayoshi funaba.  [ruby-core:62349]

Mon May  5 01:12:27 2014  Tadayoshi Funaba  <tadf@dotrb.org>

	* ext/date/date_core.c (rt_rewrite_frags): a new feature (not a
	  bug fix) of strptime.  applies offset even if the given date is
	  not local time (%s and %Q).  This is an exceptional feature and
	  I do NOT recommend to use this at all.  Thank you git community.

Sun May  4 20:51:32 2014  Tanaka Akira  <akr@fsij.org>

	* lib/time.rb (Time.force_zone!): Use usual local time if it has
	  expected offset from UTC.

Sun May  4 17:58:12 2014  Tanaka Akira  <akr@fsij.org>

	* lib/time.rb (Time.force_zone!): New private method.
	  (Time.make_time): Use Time.force_zone!.
	  (Time.strptime): Ditto.
	  (Time.rfc2822): Ditto.
	  (Time.xmlschema): Ditto.

	* lib/rss/rss.rb (Time.w3cdtf): Use Time.force_zone!.

Sun May  4 10:22:59 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* math.c (math_atan2): return values like as expected by C99 if
	  both two arguments are infinity.  based on the patch by cremno
	  phobia <cremno AT mail.ru> in [ruby-core:62310].  [Feature #9799]
